use Integer.valueOf rather than new Integer
git-svn-id: https://svn.apache.org/repos/asf/archiva/trunk@1137821 13f79535-47bb-0310-9956-ffa450edef68